--- a/manifest.json
+++ b/manifest.json
@@ -56,13 +56,34 @@
             },
             "icons" : {
                 "ios" : {
-                    "appstore" : "C:/Users/Intel/Desktop/启动图标/启动图标.png"
+                    "appstore" : "unpackage/res/icons/1024x1024.png",
+                    "ipad" : {
+                        "app" : "unpackage/res/icons/76x76.png",
+                        "app@2x" : "unpackage/res/icons/152x152.png",
+                        "notification" : "unpackage/res/icons/20x20.png",
+                        "notification@2x" : "unpackage/res/icons/40x40.png",
+                        "proapp@2x" : "unpackage/res/icons/167x167.png",
+                        "settings" : "unpackage/res/icons/29x29.png",
+                        "settings@2x" : "unpackage/res/icons/58x58.png",
+                        "spotlight" : "unpackage/res/icons/40x40.png",
+                        "spotlight@2x" : "unpackage/res/icons/80x80.png"
+                    },
+                    "iphone" : {
+                        "app@2x" : "unpackage/res/icons/120x120.png",
+                        "app@3x" : "unpackage/res/icons/180x180.png",
+                        "notification@2x" : "unpackage/res/icons/40x40.png",
+                        "notification@3x" : "unpackage/res/icons/60x60.png",
+                        "settings@2x" : "unpackage/res/icons/58x58.png",
+                        "settings@3x" : "unpackage/res/icons/87x87.png",
+                        "spotlight@2x" : "unpackage/res/icons/80x80.png",
+                        "spotlight@3x" : "unpackage/res/icons/120x120.png"
+                    }
                 },
                 "android" : {
-                    "xxxhdpi" : "C:/Users/Intel/Desktop/启动图标/启动图标.png",
-                    "xxhdpi" : "C:/Users/Intel/Desktop/启动图标/启动图标.png",
-                    "xhdpi" : "C:/Users/Intel/Desktop/启动图标/启动图标.png",
-                    "hdpi" : "C:/Users/Intel/Desktop/启动图标/启动图标.png"
+                    "xxxhdpi" : "unpackage/res/icons/192x192.png",
+                    "xxhdpi" : "unpackage/res/icons/144x144.png",
+                    "xhdpi" : "unpackage/res/icons/96x96.png",
+                    "hdpi" : "unpackage/res/icons/72x72.png"
                 }
             }
         }
@@ -97,6 +118,12 @@
                     "key" : "RL2BZ-F2WKD-P6G47-PDKA7-S2VUZ-NCBF6"
                 }
             }
+        },
+        "devServer" : {
+            "https" : false
+        },
+        "router" : {
+            "base" : "./"
         }
     }
 }
